--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,500;1,700&display=swap');
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root{
+  --bg-black:#1b1c22;
+  --bg-black1:#22272A;
+  --fg-green:#24B47E;
+  --fg-white:#FFFFFF;
+  --font-primary:'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body,html{
+  padding: 0%;
+  margin: 0%;
+  background-color: var(--bg-black);
+  color:var(--fg-white);
+}
+::-webkit-scrollbar{
+  width: 5px;
+  background: transparent;
+}
+::-webkit-scrollbar-thumb{
+  background: var(--fg-green);
+  border-radius: 20px;
 }
