--- a/src/Styles/ContactUs.css
+++ b/src/Styles/ContactUs.css
@@ -74,8 +74,8 @@
     margin-right: 10px;
 }
 .text-area{
-    width: 400px;
-    line-height: normal !important;
+    min-width: 400px;
+    line-height: normal;
     border: none;
     outline: none;
     border-bottom: 3px solid var(--fg-green);
@@ -83,7 +83,33 @@
     padding-left: 5px;
     font-weight: 700;
     color:var(--fg-white);
+    height: 60px;
 }
 .txt-content{
     margin-top: 20px;
+    ;
+}
+.submit{
+    background-image:linear-gradient(90deg, #24B47E,#a2a5a4);
+    width: fit-content;
+    padding: 3px;
+    border-radius: 50px;
+    color:white;
+    margin-top: 60px;
+    margin-left: 10px;
+    margin-bottom:90px 
+    
+}
+.submit>div{
+    width: 100%;
+    background-color: var(--bg-black);
+    border-radius: 50px;
+    padding: 18px 80px;
+    font-size: 14px;
+    font-weight: 800;
+    cursor: pointer;
+
+}
+.submit>div:hover{
+   color: var(--fg-green);
 }
