--- a/src/Styles/Events.css
+++ b/src/Styles/Events.css
@@ -87,6 +87,7 @@
 }
 .event-card{
     min-width:300px;
+    max-width: 300px;
     height:300px;
     background-color: rgba(38, 38, 43,0.6);
     border-radius: 5px;
