--- a/src/Styles/WebDevs.css
+++ b/src/Styles/WebDevs.css
@@ -5,6 +5,14 @@
     overflow-y: auto;
     overflow-x: hidden;
 }
+.webdevs::-webkit-scrollbar {
+    display: block !important;
+}
+.webdevs::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(to bottom, #56a387, #3cc51a);
+    border-radius: 10px;
+    display: block !important;
+}
 .webdevs-container{
     text-align: center;
     padding: 20px;
