--- a/src/Styles/ComponentsStyles/Navbar.css
+++ b/src/Styles/ComponentsStyles/Navbar.css
@@ -8,6 +8,14 @@
     justify-content: space-between;
     
 }
+.navbar-logo{
+    width: 100px;
+
+}
+.navbar-logo>img{
+    width: 100%;
+    height: 100%;
+}
 .navbar-links{
     width: 100%;
     font-family: var(--font-primary);
